--- a/0x03-csharp-hashset_stack_queue_linkedlist/3-stack_push_pop.cs/3-stack_push_pop.csproj
+++ b/0x03-csharp-hashset_stack_queue_linkedlist/3-stack_push_pop.cs/3-stack_push_pop.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>_3_stack_push_pop.cs</RootNamespace>
+    <RootNamespace>_3_stack_push_pop</RootNamespace>
   </PropertyGroup>
 
 </Project>
